Don't preverve whitespace for `.fileupload .uneditable-input`. Fixes #23

--- a/less/fileupload.less
+++ b/less/fileupload.less
@@ -51,6 +51,10 @@
   display: inline;
 }
 
+.fileupload .uneditable-input {
+  white-space: normal;
+}
+
 .thumbnail-borderless .thumbnail {
   border: none;
   padding: 0;
